--- a/src/app/comun/inmap/inmap.component.sass
+++ b/src/app/comun/inmap/inmap.component.sass
@@ -79,6 +79,7 @@
     
     #ContenedorMapa
       position: absolute
+      z-index: 2
       width: 100%
       height: 100%
       .mapaMundo
@@ -95,19 +96,29 @@
 
     #creditoMapa
       position: absolute
+      z-index: 5
       top: 2%
       left: 2% 
       width: 25%
       height: 6%
 
+    #tiempo
+      position: absolute
+      z-index: 5
+      left: 32%
+      top: 2%
+      width: 33%
+
     #textoDelirium
       position: absolute
+      z-index: 5
       top: 2%
       left: 35% 
       width: 30%
 
     #panelControl
       position: absolute
+      z-index: 5
       display: block
       bottom: 4%
       left: 40% 
@@ -117,6 +128,7 @@
      
     #experiencia
       position: absolute
+      z-index: 5
       bottom: 0%
       left: 0% 
       width: 100%
@@ -124,18 +136,21 @@
 
     #iconoConfiguracion
         position: absolute
+        z-index: 5
         top: 2%
         left: 27%
         height: 6%
 
     #iconoSocial
         position: absolute
+        z-index: 5
         top: 10%
         left: 5%
         height: 6%
 
     #contenedorHeroes 
         position: absolute
+        z-index: 5
         display: flex
         flex-direction: column
         right: 1%
