Correcciones de compilado

--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -285,7 +285,7 @@
         height: 100%
       .botonCambiarValor
         position: relative
-        width:10%
+        width: 10% //Cambio Upgrade
         margin: 0 10%
         font-size: 5em
 
