--- a/src/app/comun/mapa-general/mapaGeneral.component.sass
+++ b/src/app/comun/mapa-general/mapaGeneral.component.sass
@@ -13,9 +13,8 @@
 
   .contenedorScroll
     position: absolute
-    width:200%
-    height:200%
-
+    width: 200% //Cambio upgrade
+    height: 200% //Cambio upgrade
 
   .mapaMundo
     position: absolute
@@ -27,7 +26,7 @@
 
   .mapaRegion
     position: absolute
-    top:50%
+    top: 50% //Cambio Upgrade
     left: 50%
     //max-height: 100%
     //max-width: 100%
