--- a/src/app/comun/desarrollador/desarrollador.component.sass
+++ b/src/app/comun/desarrollador/desarrollador.component.sass
@@ -2042,10 +2042,16 @@
       mat-form-field
         position: relative
         margin: 20px
+        color: white
         mat-label
           color: chartreuse
         input
           color: white
+        mat-select
+          color: white
+        mat-checkbox
+          color: white
+
 
 // ANIMACIONE:
 
