--- a/src/app/comun/desarrollador/desarrollador.component.sass
+++ b/src/app/comun/desarrollador/desarrollador.component.sass
@@ -2195,6 +2195,19 @@
         mat-checkbox
           color: white
 
+.contenedorCampoRelacional
+  position: relative
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  height: 200%
+  .titulo
+    color: greenyellow
+  .imagenCampoRelacional
+    height: 25%
+    &:hover
+        filter: invert(1)
 
 // ANIMACIONE:
 
