--- a/src/app/comun/desarrollador/formClasesComponent/formClases.component.html
+++ b/src/app/comun/desarrollador/formClasesComponent/formClases.component.html
@@ -1,6 +1,6 @@
 
 <!--   ******************* -->
-<!--         Plantilla       -->
+<!--         Form Clase       -->
 <!--   ******************* -->
 
     <!-- LISTA HECHIZOS -->
