--- a/src/app/comun/desarrollador/formEnemigosComponent/formEnemigos.component.html
+++ b/src/app/comun/desarrollador/formEnemigosComponent/formEnemigos.component.html
@@ -1,7 +1,131 @@
 
 <!--   ******************* -->
-<!--         Plantilla       -->
+<!--         Form Enemigos       -->
 <!--   ******************* -->
 
-<div class="contenedorPlantilla">
-</div>
+    <!-- LISTA Enemigos -->
+    <panelSelectorComponent 
+            [tipo]="'Enemigos'"
+            [datos]="this.desarrolladorService.enemigos.enemigos"
+            [titulo]="'Enemigos'"
+            [botonAdd]="true"
+            [lateral]="'izquierda'"
+            [botonEliminarRelacion]="false"
+            >
+    </panelSelectorComponent>
+
+    <!-- LISTA Hechizos Enemigos -->
+    <panelSelectorComponent 
+            [tipo]="'Hechizos_Disponibles'"
+            [datos]="hechizosDisponibles"
+            [titulo]="'Hechizos Enemigo'"
+            [botonAdd]="true"
+            [lateral]="'derecha'"
+            [botonEliminarRelacion]="false"
+            >
+    </panelSelectorComponent>
+
+        <!-- CENTRAL DATOS ENEMIGOS -->
+        <div id="visualizador">
+
+            <div class="contenedorImagen">
+                <img class="imagen" (click)="desarrolladorService.abrirSelectorImagen(desarrolladorService.enemigos.enemigos[desarrolladorService.enemigoSeleccionadoIndex].familia)" src="./assets/{{desarrolladorService.pathImagenes}}/{{desarrolladorService.enemigos.enemigos[desarrolladorService.enemigoSeleccionadoIndex].imagen_id}}.png"/>
+            </div>
+
+			<form  id="formularioGeneral" [formGroup]="formEnemigo">
+				  <mat-form-field appearance="legacy"  class="formId">
+					<mat-label>ID</mat-label>
+                    <input matInput disabled value="{{id_Enemigo.value}}">
+				  </mat-form-field>
+
+				  <mat-form-field appearance="legacy" class="formNombre">
+					<mat-label>Nombre Enemigo</mat-label>
+					<input matInput formControlName="nombre">
+				  </mat-form-field>
+
+				  <mat-form-field appearance="legacy" class="formDescripcion">
+					<mat-label>Descripción de Enemigo</mat-label>
+					<input matInput formControlName="descripcion">
+				  </mat-form-field>
+
+                    <div class="selector formTipoArmadura">
+                      <mat-form-field appearance="legacy">
+                        <mat-label>Familia</mat-label>
+                        <mat-select formControlName="familia">
+                            <mat-option value="gnoll">Gnoll</mat-option>
+                            <mat-option value="animal">Animal</mat-option>
+                            <mat-option value="demonio">Demonio</mat-option>
+                            <mat-option value="dweller">Dweller</mat-option>
+                            <mat-option value="bosque">Bosque</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+			</form>
+
+            <div id="contenedorInferior">
+
+                <div class="selector selectorTalento">
+                    <div class="opcion seleccionado">Estadisticas</div>
+                    <div class="opcion">Propiedades</div>
+                    <div class="opcion">Acciones</div>
+                </div>
+
+                <div class="tituloSeccion">Estadisticas Base:</div>
+                <form  id="formularioEstadisticas" [formGroup]="formEstadisticas">
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Armadura</mat-label>
+                        <input matInput type="number" min="0" formControlName="armadura">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Mag. Resist</mat-label>
+                        <input matInput type="number" min="0" formControlName="resistencia_magica">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Vitalidad</mat-label>
+                        <input matInput type="number" min="0" formControlName="vitalidad">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>AP</mat-label>
+                        <input matInput type="number" min="0" formControlName="AP">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>AD</mat-label>
+                        <input matInput type="number" min="0" formControlName="AD">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Critico</mat-label>
+                        <input matInput type="number" min="0" formControlName="critico">
+                      </mat-form-field>
+                </form>
+
+                <div class="tituloSeccion">Escalado:</div>
+                <form  id="formularioEstadisticas" [formGroup]="formEscalado">
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Armadura_ESC</mat-label>
+                        <input matInput type="number" min="0" formControlName="armadura_esc">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Mag. Resist_ESC</mat-label>
+                        <input matInput type="number" min="0" formControlName="resistencia_magica_esc">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Vitalidad_ESC</mat-label>
+                        <input matInput type="number" min="0" formControlName="vitalidad_esc">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>AP_ESC</mat-label>
+                        <input matInput type="number" min="0" formControlName="AP_esc">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>AD_ESC</mat-label>
+                        <input matInput type="number" min="0" formControlName="AD_esc">
+                      </mat-form-field>
+                      <mat-form-field appearance="legacy"  class="campo">
+                        <mat-label>Critico_ESC</mat-label>
+                        <input matInput type="number" min="0" formControlName="critico_esc">
+                      </mat-form-field>
+                </form>
+            </div>
+
+
+        </div>
