--- a/src/app/comun/desarrollador/formMisionesComponent/formMisiones.component.sass
+++ b/src/app/comun/desarrollador/formMisionesComponent/formMisiones.component.sass
@@ -2,9 +2,143 @@
 @import "../../../../variables.sass"
 @import "../../../../breakpoints.scss"
 
-::ng-deep .contenedorFormMisiones
+.botonAddLista
+    position: absolute
+    display: flex
+    align-items: center
+    justify-content: center
+    background-color: greenyellow
+    color: black
+    height: 10%
+    width: 100%
+    &:hover
+      background-color: white
+      color: black
 
-.contenedorFormMisiones
+.mat-label
+.mat-checkbox
+    position: relative
+    width: 100%
+
+#visualizador
+    position: absolute
+    left: 25%
+    width: 50%
+    height: 100%
+    background-color: rgba(0,0,0,0.5)
+    .contenedorImagen
+      position: absolute
+      top: 2vh
+      left: 2vh
+      width: 10vw
+      height: 10vw
+      border: 2px solid white
+      z-index: 10
+      img
+        position: relative
+        width: 100%
+        height: 100%
+    form
+      position: absolute
+      width: 100%
+      height: 100%
+
+      .selector
+        position: absolute
+        mat-form-field
+          width: 100%
+
+      mat-form-field
+        position: absolute
+        mat-label
+          color: chartreuse
+        input
+          color: white
+
+#formularioGeneral
+  .formId
+    right: 5%
+    top: 5%
+    width: 5%
+  .formNombre
+    left: 30%
+    top: 5%
+  .formDescripcion
+    left: 30%
+    top: 20%
+    width: 60%
+  .formTipoArmadura
+    top: 5%
+    width: 15%
+    left: 65%
+
+#contenedorInferior
+  position: absolute
+  display: flex
+  flex-direction: column
+  top: 40%
+  width: 100%
+  height: 60%
+  .tituloSeccion
+    height: 15%
+    text-align: center
+    color: powderblue
+  form
+    position: relative
+    width: 95%
+    left: 5%
+    height: 25%
+    display: grid
+    grid-template-columns: repeat(6, 15%)
+    grid-gap: 1%
+    .campo
+      position: relative
+
+  #formularioRecompensas
+    grid-template-columns: repeat(4, 23%)
+
+.campoSelector
+  top: 78% 
+  right: 85%
+  width: 10%
+.contenedorCampoRelacional
+  position: absolute
+  display: flex
+  flex-direction: column
+  align-items: center
+  .titulo
+    color: greenyellow
+  .imagenCampoRelacional
+    width: 100%
+    &:hover
+        filter: invert(1)
+
+.selectorTalento
+.selector
+  position: relative
+  display: flex
+  width: 100%
+  height: fit-content
+  margin-bottom: 2%
+  .opcion
+    position: relative
+    display: flex
+    width: 50%
+    height: 100%
+    line-height: 1.5
+    align-items: center
+    justify-content: center
+    color: white
+    background-color: black
+    &.seleccionado
+      color: black
+      background-color: white
+    &:hover
+      color: black
+      background-color: white
+
+
+
 
 
 
