--- a/src/app/comun/desarrollador/panelSelectorComponent/panelSelector.component.sass
+++ b/src/app/comun/desarrollador/panelSelectorComponent/panelSelector.component.sass
@@ -2,7 +2,6 @@
 @import "../../../../variables.sass"
 @import "../../../../breakpoints.scss"
 
-
 .botonAddLista
     position: absolute
     display: flex
@@ -31,6 +30,10 @@
     text-align: center
     background-color: rgba(0,0,0,1)
     height: 15%
+  &.libre
+    width: 100%
+    height: 100%
+    left: 0%
   &.izquierda
     left: 3%
   &.derecha
