--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,11 +1,11 @@
 
+
+@use '@angular/material' as mat
+@import "~@angular/material/theming"
+
 @import "./breakpoints.scss"
 @import 'animate.css'
 @import "~jsoneditor/dist/jsoneditor.min.css"
-
-
-
-
 @font-face
     font-family: "TangerineLocal"
     src: url(./fonts/tangerine-font.woff2)
@@ -15,6 +15,16 @@
 
     font-family: "Chancery"
     src: url(./fonts/Apple-Chancery.ttf)
+
+$angular-primary: mat.define-palette(mat.$teal-palette, 500, 100, 900)
+$angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400)
+$angular-warn: mat.define-palette(mat.$red-palette)
+
+$angular-dark-theme: mat.define-dark-theme( ( color: ( primary: $angular-primary, accent: $angular-accent, warn: $angular-warn,),))
+
+.darkMode 
+  @include mat.all-component-colors($angular-dark-theme)
+
 
 html
     margin: 0
