--- a/src/app/comun/desarrollador/triggerComponent/trigger.component.sass
+++ b/src/app/comun/desarrollador/triggerComponent/trigger.component.sass
@@ -72,4 +72,12 @@
   display: flex
   justify-content: center
 
+.botonEliminar
+  position: absolute
+  filter: invert(1)
+  top: 12%
+  right: 5%
+  width: 5%
+  z-index: 1
+
 
